--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "editor.mouseWheelZoom": true,
     "typescript.preferences.importModuleSpecifier": "relative",
     "files.insertFinalNewline": true,
     "files.trimTrailingWhitespace": true,
@@ -6,4 +7,6 @@
         "editor.insertSpaces": true,
         "editor.tabSize": 4
     },
+    "prettier.useTabs": true,
+    "editor.fontSize": 14
 }
