--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
     "@angular/material": "^13.3.9",
+    "@angular/material-moment-adapter": "^13.3.2",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "chart.js": "^3.9.1",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
