--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "editor.tabSize": 4
     },
     "prettier.useTabs": true,
-    "editor.fontSize": 14
+    "editor.fontSize": 14,
+    "editor.insertSpaces": false
 }
