--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "course-app",
+  "name": "ffp-ui",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "npm run start:dev",
+    "build": "ng run build:dev",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start:dev": "ng serve --c=dev",
+    "build:dev": "ng build --c=dev",
+    "start:prod": "ng serve --c=prod",
+    "build:prod": "ng build --c=prod"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +24,15 @@
     "@angular/router": "^15.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "@angular/cdk": "^15.2.1",
+    "@angular/localize": "~15.2.1",
+    "@angular/material": "^15.2.1",
+    "@ngrx/effects": "^15.3.0",
+    "@ngrx/entity": "^15.3.0",
+    "@ngrx/store": "^15.3.0",
+    "@ngrx/store-devtools": "^15.3.0",
+    "ngx-image-cropper": "^6.0.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.5",
