--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@ngrx/entity": "^15.3.0",
     "@ngrx/store": "^15.3.0",
     "@ngrx/store-devtools": "^15.3.0",
-    "ngx-image-cropper": "^6.0.2"
+    "ngx-image-cropper": "^6.0.2",
+    "chart.js": "^3.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.5",
