--- a/package.json
+++ b/package.json
@@ -15,25 +15,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.1.0",
+    "@angular/cdk": "^15.2.1",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.1.0",
+    "@angular/localize": "~15.2.1",
+    "@angular/material": "^15.2.1",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.12.0",
-    "@angular/cdk": "^15.2.1",
-    "@angular/localize": "~15.2.1",
-    "@angular/material": "^15.2.1",
+    "@asymmetrik/ngx-leaflet": "^15.0.1",
     "@ngrx/effects": "^15.3.0",
     "@ngrx/entity": "^15.3.0",
     "@ngrx/store": "^15.3.0",
     "@ngrx/store-devtools": "^15.3.0",
+    "chart.js": "^3.9.1",
+    "leaflet": "^1.9.4",
     "ngx-image-cropper": "^6.0.2",
-    "chart.js": "^3.9.1"
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.5",
@@ -46,6 +48,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "@types/leaflet": "^1.9.3"
   }
 }
