--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/entity": "^15.3.0",
     "@ngrx/store": "^15.3.0",
     "@ngrx/store-devtools": "^15.3.0",
+    "angular-feather": "^6.5.0",
     "chart.js": "^3.9.1",
     "leaflet": "^1.9.4",
     "ngx-image-cropper": "^6.0.2",
