--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@ngrx/store": "^15.3.0",
     "@ngrx/store-devtools": "^15.3.0",
     "angular-feather": "^6.5.0",
+    "angular-l10n": "^15.0.0",
     "chart.js": "^3.9.1",
     "leaflet": "^1.9.4",
+    "ngx-cookie-service": "^15.0.0",
     "ngx-image-cropper": "^6.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -43,13 +45,14 @@
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.3",
+    "@types/node": "^20.4.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4",
-    "@types/leaflet": "^1.9.3"
+    "typescript": "~4.9.4"
   }
 }
