--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "angular-l10n": "^15.0.0",
     "chart.js": "^3.9.1",
     "leaflet": "^1.9.4",
+    "material-icons": "^1.13.9",
     "ngx-cookie-service": "^15.0.0",
+    "ngx-file-drop": "^15.0.0",
+    "ngx-image-compress": "^15.1.6",
     "ngx-image-cropper": "^6.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
