--- a/package.json
+++ b/package.json
@@ -14,39 +14,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.0",
-    "@angular/cdk": "^15.2.1",
-    "@angular/common": "^15.1.0",
-    "@angular/compiler": "^15.1.0",
+    "@angular/animations": "^16.1.7",
+    "@angular/cdk": "16.1.6",
+    "@angular/common": "^16.1.7",
+    "@angular/compiler": "^16.1.7",
     "@angular/core": "^16.1.6",
-    "@angular/forms": "^15.1.0",
-    "@angular/localize": "~15.2.1",
-    "@angular/material": "^15.2.1",
-    "@angular/platform-browser": "^15.1.0",
-    "@angular/platform-browser-dynamic": "^15.1.0",
-    "@angular/router": "^15.1.0",
-    "@asymmetrik/ngx-leaflet": "^15.0.1",
-    "@ngrx/effects": "^15.3.0",
-    "@ngrx/entity": "^15.3.0",
-    "@ngrx/store": "^15.3.0",
-    "@ngrx/store-devtools": "^15.3.0",
+    "@angular/forms": "^16.1.7",
+    "@angular/localize": "~16.1.7",
+    "@angular/material": "^16.1.6",
+    "@angular/platform-browser": "^16.1.7",
+    "@angular/platform-browser-dynamic": "^16.1.7",
+    "@angular/router": "^16.1.7",
+    "@asymmetrik/ngx-leaflet": "^16.0.1",
+    "@ngrx/effects": "^16.1.0",
+    "@ngrx/entity":  "^16.1.0",
+    "@ngrx/store":  "^16.1.0",
+    "@ngrx/store-devtools": "^16.1.0",
     "angular-feather": "^6.5.0",
     "angular-l10n": "^15.0.0",
     "chart.js": "^3.9.1",
     "leaflet": "^1.9.4",
     "material-icons": "^1.13.9",
-    "ngx-cookie-service": "^15.0.0",
+    "ngx-cookie-service": "^16.0.0",
     "ngx-file-drop": "^15.0.0",
     "ngx-image-compress": "^15.1.6",
     "ngx-image-cropper": "^6.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.5",
-    "@angular/cli": "~15.1.5",
-    "@angular/compiler-cli": "^15.1.0",
+    "@angular-devkit/build-angular": "^16.1.6",
+    "@angular/cli": "~16.1.6",
+    "@angular/compiler-cli": "^16.1.7",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
     "@types/node": "^20.4.2",
