--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "ngx-image-cropper": "^6.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.1"
+    "zone.js": "~0.13.1",
+    "keycloak-angular": "^15.0.0",
+    "keycloak-js": "^23.0.0"
+
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.6",
